--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
-.my-header{
+.my-nav{
     background-color:#2c3e50;
+}
+
+.my-header{
+    background-color: #1abc9c;
+}
+
+.my-about{
+    background-color: #1abc9c;
+}
+
+.hr-light{
+    display: inline-block;
+    width: 120px;
+
+    opacity: 1;
+
+    border-radius: 25px;
+
+    color: white;
+    border: 2px solid white;
+}
+
+.hr-dark{
+    display: inline-block;
+    width: 120px;
+
+    opacity: 1;
+
+    border-radius: 25px;
+
+    color: rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
 }
