--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,14 @@
     background-color: #1abc9c;
 }
 
+.my-footer{
+    background-color:#3a546d;
+}
+
+.my-footer-2{
+    background-color:#2c3e50;
+}
+
 .hr-light{
     display: inline-block;
     width: 120px;
@@ -32,4 +40,43 @@
 
     color: rgb(0, 0, 0);
     border: 2px solid rgb(0, 0, 0);
+}
+
+.my-span{
+    color:#1abc9c ;
+}
+
+.fa-facebook-f{
+    border: 2px solid white;
+
+    padding: 12px 15px;
+
+    border-radius: 25px;
+}
+
+
+.fa-google-plus-g{
+    border: 2px solid white;
+
+    padding: 12px 11px;
+
+    border-radius: 25px;
+}
+
+
+.fa-twitter{
+    border: 2px solid white;
+
+    padding: 12px 12px;
+
+    border-radius: 25px;
+}
+
+
+.fa-linkedin-in{
+    border: 2px solid white;
+
+    padding: 12px 13px;
+
+    border-radius: 25px;
 }
